--- a/encyclopedia/templates/404.html
+++ b/encyclopedia/templates/404.html
@@ -1,10 +1,13 @@
+{% extends "encyclopedia/layout.html" %}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<title>404 page not found</title>
+{% block title %}
+    404 - Page Not Found
+{% endblock %}
 
+{% block body %}
 <div class="text-center mt-5">
     <h1>404 - Page Not Found</h1>
     <p>The page you are looking for does not exist.</p>
-    <p>Please check the URL or return to the <a href="{% url 'index' %}">home page</a>.</p>
 </div>
+{% endblock %}
 
